--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,81 +1,35 @@
 <resources>
-    <string name="app_name">FlowWall</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">流量墙</string>
+    <string name="action_settings">设置</string>
     <string name="setting">设置</string>
-    <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_settings">设置</string>
+    <string name="pref_header_general">通用</string>
 
-    <!-- Strings related to Settings -->
+    <string name="pref_ringtone_silent">静音</string>
 
-    <!-- Example General settings -->
-    <string name="pref_header_general">General</string>
-
-    <string name="pref_title_social_recommendations">Enable social recommendations</string>
-    <string name="pref_description_social_recommendations">Recommendations for people to contact
-        based on your message history
-    </string>
-
-    <string name="pref_title_display_name">Display name</string>
-    <string name="pref_default_display_name">John Smith</string>
-
-    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
-    <string-array name="pref_example_list_titles">
-        <item>Always</item>
-        <item>When possible</item>
-        <item>Never</item>
+    <string-array name="query_frequency_titles">
+        <item>1分钟</item>
+        <item>3分钟</item>
+        <item>5分钟</item>
+        <item>10分钟</item>
+        <item>30分钟</item>
     </string-array>
-    <string-array name="pref_example_list_values">
+    <string-array name="query_frequency_values">
         <item>1</item>
-        <item>0</item>
-        <item>-1</item>
-    </string-array>
-
-    <!-- Example settings for Data & Sync -->
-    <string name="pref_header_data_sync">Data &amp; sync</string>
-
-    <string name="pref_title_sync_frequency">Sync frequency</string>
-    <string-array name="pref_sync_frequency_titles">
-        <item>15 minutes</item>
-        <item>30 minutes</item>
-        <item>1 hour</item>
-        <item>3 hours</item>
-        <item>6 hours</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_sync_frequency_values">
-        <item>15</item>
-        <item>30</item>
-        <item>60</item>
-        <item>180</item>
-        <item>360</item>
-        <item>-1</item>
-    </string-array>
-
-    <string-array name="list_preference_entries">
-        <item>Entry 1</item>
-        <item>Entry 2</item>
-        <item>Entry 3</item>
-    </string-array>
-
-    <string-array name="list_preference_entry_values">
-        <item>1</item>
-        <item>2</item>
         <item>3</item>
+        <item>5</item>
+        <item>10</item>
+        <item>30</item>
     </string-array>
 
-    <string-array name="multi_select_list_preference_default_value" />
-
-    <string name="pref_title_system_sync_settings">System sync settings</string>
-
-    <!-- Example settings for Notifications -->
-    <string name="pref_header_notifications">Notifications</string>
-
-    <string name="pref_title_new_message_notifications">New message notifications</string>
-
-    <string name="pref_title_ringtone">Ringtone</string>
-    <string name="pref_ringtone_silent">Silent</string>
-
-    <string name="pref_title_vibrate">Vibrate</string>
-    <string name="title_phone">手机号码</string>
-    <string name="sw_title_boot_start">开机启动</string>
-    <string name="sw_summary_boot_start">是否开机自启动流量查询服务</string>
+    <string name="phone_num_title">手机号码</string>
+    <string name="boot_start_title">开机启动</string>
+    <string name="boot_start_summary">是否开机自启动流量查询服务</string>
+    <string name="query_frequency_title">查询间隔（分钟）</string>
+    <string name="flow_interval_title">断网流量差（MB）</string>
+    <string name="account_info_title">账号设置</string>
+    <string name="query_setting_title">查询设置</string>
+    <string name="extend_setting_title">扩展设置</string>
+    <string name="is_auto_disconnect_data_summary">超过设定的断网流量差后，自动关闭移动连接（需已授予ROOT权限）</string>
+    <string name="is_auto_disconnect_data_title">自动断网</string>
 </resources>
