--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="is_auto_disconnect_data_title">自动断网</string>
     <string name="is_connect_mobile_start_summary">当连接到移动网络时，主动运行服务</string>
     <string name="is_connect_mobile_start_title">主动运行（Android6.0.1以下可选）</string>
+    <string name="other_info_title">其它信息</string>
 </resources>
